--- a/style.css
+++ b/style.css
@@ -99,8 +99,7 @@ h3{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 128px;
-    height: 44px;
+   
 }
 
 /* Header Section */
@@ -202,15 +201,24 @@ h3{
 .home-phone{
     display: flex;
     flex-direction: column;
-
-
 }
 
 .home-phone img{
     width: 75%;
     margin-bottom: 5rem;
     align-self: center;
+    position: relative;
+}
 
+.home-phone .phone-righe{
+    position: absolute;
+    width: 120px;
+    top: 0.5%;
+    right: 12%;
+}
+
+.home-phone .phone-left{
+    display: none;
 }
 
 .home-phone__detail{
@@ -219,12 +227,12 @@ h3{
     justify-content: flex-start;
 }
 
-.home-phone h2{
+.home-phone__detail h1{
     font-size: 3.2rem;
     margin-bottom: 2rem;
 }
 
-.home-phone p{
+.home-phone__detail p{
     font-size: 1.8rem;
     
     line-height: 3.7rem;
@@ -232,6 +240,8 @@ h3{
 
 .btn__home-phone{
     margin: 3rem 0;
+    width: 128px;
+    height: 44px;
 }
 
 .btn__home-phone .btn__name {
@@ -241,4 +251,56 @@ h3{
 
 
 @media screen and (min-width:768px) {
+
+    .home-phone{
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .home-phone__detail{
+        order: 1;
+        margin-left: 2rem;
+    }
+
+    .home-phone img{
+        order: 2;
+        width: 550px;
+        height: 583px;
+    }
+
+    .home-phone .phone-righe{
+        display: none;
+    }
+
+    .home-phone .phone-left{
+        display: block;
+        width: 230px ;
+        height: 480px;
+        position:absolute;
+        top:0.5%;
+        left: 8.8%;
+        z-index: 1;
+    }
+
+    .home-phone__detail h1{
+        font-size: 9rem;
+        margin-bottom: 3rem;
+    }
+    
+    .home-phone__detail p{
+        width: 800px;
+        font-size: 3.6rem;
+        line-height: 5.4rem;
+    }
+
+    .btn__home-phone{
+        margin: 10rem 0;
+        width: 276px;
+        height: 72px;
+    }
+
+    .btn__home-phone .btn__name {
+        font-size: 3.2rem ;
+        line-height: 4.8px;
+    }
 }
