content section tow and three

--- a/style.css
+++ b/style.css
@@ -31,10 +31,12 @@ h2,
 h3{
     color: var(--color-text);
     font-weight: 700;
+    margin-bottom: 3rem;
 }
 
 .container{
      max-width: 1280px;
+     margin: 0 auto;
 }
 
 .block{
@@ -231,7 +233,6 @@ h3{
 
 .home-phone__detail h1{
     font-size: 3.2rem;
-    margin-bottom: 2rem;
 }
 
 .home-phone__detail p{
@@ -248,7 +249,7 @@ h3{
 
 .btn__home-phone .btn__name {
     font-size: 1.8rem ;
-    line-height: 27px;
+    line-height: 2.7rem;
 }
 
 
@@ -286,7 +287,6 @@ h3{
 
     .home-phone__detail h1{
         font-size: 9rem;
-        margin-bottom: 3rem;
     }
     
     .home-phone__detail p{
@@ -312,13 +312,73 @@ h3{
 .products{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    /* grid-template-rows: repeat(2,1fr); */
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
     align-items: center;
+    justify-items: center;
+    margin-bottom: 6rem;
 }
 
 .product__item{
-    padding: 1rem;
-}git 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.product__item img{
+    margin: 1rem 0;
+    width: 84px;
+    height: 84px;
+}
+
+
+@media screen and (min-width:768px) {
+
+    .products{
+        grid-template-columns: repeat(6,1fr);
+    }
+
+}
+
+/* Central Device */
+
+.central-device{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.central-device img{
+    max-width: 320px;
+    margin-bottom: 3rem;
+}
+
+.central-device h2{
+    font-size: 3.5rem;
+    line-height: 4.8rem;
+}
+
+.central-device p{
+    font-size: 1.8rem;
+    line-height: 3.5rem;
+}
+
+
+@media screen and (min-width:768px) {
+
+    .central-device img{
+        order: 2;
+        max-width: 760px;
+    }
+
+    .central-device h2{
+        font-size: 4.8rem;
+        line-height: 5.8rem;
+    }
+    
+    .central-device p{
+        max-width: 850px;
+        font-size: 3.2rem;
+        line-height: 5.8rem;
+        margin: 3rem 0 6rem;
+    }
+    
+
+}
