--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --color-footer-mobile:#146183;
     --color-footer-desk: linear-gradient(97.01deg, #53B9D9 -6.41%, rgba(20, 77, 101, 0) 110.43%);
     --color-text:#fff;
+    --color-text-gray:#474747;
 }
 
 html{
@@ -529,5 +530,81 @@ h3{
     .brochure__detail p , .app__detail p{
         color: #5B5B5B;
         font-size: 3.6rem;
+    }
+}
+
+/* Capabilities Section */
+
+.Capabilities{
+    display: grid;
+    grid-template-columns: repeat(2,fit-content(50%));
+    gap: 2rem;
+}
+
+.capability img{
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.capability p{
+    font-size: 1.3rem;
+    line-height: 2.5rem;
+    color: var(--color-text-gray);
+    
+}
+
+
+.cooperation h3{
+    font-size: 2rem;
+    line-height: 3rem;
+    color: var(--color-primary);
+}
+
+.cooperation p{
+    font-size: 1.8rem;
+    line-height: 2.7rem;
+    color: var(--color-text-gray);
+}
+
+.cooperation img{
+    width: 100%;
+    padding: 2.5rem;
+}
+
+@media screen and (min-width:768px) {
+
+    .Capabilities{
+       
+        grid-template-columns: repeat(4,1fr);
+    }
+
+    .cooperation{
+        display: flex;
+        justify-content: space-evenly;
+        background-color: #fff;
+        padding: 8rem;
+    }
+
+    .cooperation__title{
+        max-width: 540px;
+        padding-top: 12rem;
+    }
+
+    .cooperation h3{
+        font-size: 6rem;
+        line-height: 8rem;
+        color: var(--color-primary);
+    }
+    
+    .cooperation p{
+        font-size: 3rem;
+        line-height: 5rem;
+        color: var(--color-text-gray);
+    }
+
+    .cooperation img{
+        width: 40%;
+        padding: 0;
     }
 }
